2021-04-23  Eric Botcazou<ebotcazou@adacore.com>

	* testsuite/gas/elf/section25.d: Run it everywhere.
	* testsuite/gas/elf/section26.d: Likewise.
	* testsuite/gas/elf/section26.s: Add test for .persistent.bss.

2021-04-09  Tejas Belagod  <tejas.belagod@arm.com>

	Backported from mainline.
	2021-04-09  Tejas Belagod  <tejas.belagod@arm.com>

	* config/tc-aarch64.c (warn_unpredictable_ldst): Clean-up diagnostic messages
	for LD/ST Exclusive instructions.
	* testsuite/gas/aarch64/diagnostic.s: Add a diagnostic test for STLXP.
	* testsuite/gas/aarch64/diagnostic.l: Fix-up test after message clean-up.

2021-02-19  Andreas Krebbel  <krebbel@linux.ibm.com>

	* config/tc-s390.c (s390_parse_cpu): New entry for arch14.
	* doc/c-s390.texi: Document arch14 march option.
	* testsuite/gas/s390/s390.exp: Run the arch14 related tests.
	* testsuite/gas/s390/zarch-arch14.d: New test.
	* testsuite/gas/s390/zarch-arch14.s: New test.

2021-02-06  Nick Clifton  <nickc@redhat.com>

	This is the 2.36.1 release.
	* configure: Regenerate.
	* po/gas.pot: Regenerate.

2021-02-05  Nelson Chu  <nelson.chu@sifive.com>

	* config/tc-riscv.c (riscv_multi_subset_supports): Removed
	INSN_CLASS_ZB*.
	* testsuite/gas/riscv/bitmanip-insns-32.d: Removed.
	* testsuite/gas/riscv/bitmanip-insns-64.d: Removed.
	* testsuite/gas/riscv/bitmanip-insns.s: Removed.

2021-01-26  Alan Modra  <amodra@gmail.com>

	PR 27282
	* testsuite/gas/all/none.d: Replace skip with xfail, don't xfail ft32.
	* testsuite/gas/elf/pr27228.d: xfail hppa and allow OBJECT match.

2021-01-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/27243
	* config/tc-nios2.c (md_begin): Don't disable relaxation with
	--gdwarf-N.
	* testsuite/gas/nios2/relax.d: New file.
	* testsuite/gas/nios2/relax.s: Likewise.

2021-01-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/27228
	* testsuite/gas/elf/elf.exp: Run pr27228.
	* testsuite/gas/elf/pr27228.d: New file.
	* testsuite/gas/elf/pr27228.s: Likewise.

2021-01-24  Nick Clifton  <nickc@redhat.com>
