@@ -1,0 +1,160 @@
+vmov	r0, r1, q1[2], q1[0]
+vmov	r0, r1, q2[2], q2[0]
+vmov	r0, r1, q3[2], q3[0]
+vmov	r0, r1, q4[2], q4[0]
+vmov	r0, r1, q5[2], q5[0]
+vmov	r0, r1, q6[2], q6[0]
+vmov	r0, r1, q7[2], q7[0]
+vmov	r1, r0, q0[2], q0[0]
+vmov	r2, r0, q0[2], q0[0]
+vmov	r3, r0, q0[2], q0[0]
+vmov	r4, r0, q0[2], q0[0]
+vmov	r5, r0, q0[2], q0[0]
+vmov	r6, r0, q0[2], q0[0]
+vmov	r7, r0, q0[2], q0[0]
+vmov	r8, r0, q0[2], q0[0]
+vmov	r9, r0, q0[2], q0[0]
+vmov	sl, r0, q0[2], q0[0]
+vmov	fp, r0, q0[2], q0[0]
+vmov	ip, r0, q0[2], q0[0]
+vmov	lr, r0, q0[2], q0[0]
+vmov	r0, r1, q0[2], q0[0]
+vmov	r0, r2, q0[2], q0[0]
+vmov	r0, r3, q0[2], q0[0]
+vmov	r0, r4, q0[2], q0[0]
+vmov	r0, r5, q0[2], q0[0]
+vmov	r0, r6, q0[2], q0[0]
+vmov	r0, r7, q0[2], q0[0]
+vmov	r0, r8, q0[2], q0[0]
+vmov	r0, r9, q0[2], q0[0]
+vmov	r0, sl, q0[2], q0[0]
+vmov	r0, fp, q0[2], q0[0]
+vmov	r0, ip, q0[2], q0[0]
+vmov	r0, lr, q0[2], q0[0]
+vmov	r0, r1, q1[3], q1[1]
+vmov	r0, r1, q2[3], q2[1]
+vmov	r0, r1, q3[3], q3[1]
+vmov	r0, r1, q4[3], q4[1]
+vmov	r0, r1, q5[3], q5[1]
+vmov	r0, r1, q6[3], q6[1]
+vmov	r0, r1, q7[3], q7[1]
+vmov	r1, r0, q0[3], q0[1]
+vmov	r2, r0, q0[3], q0[1]
+vmov	r3, r0, q0[3], q0[1]
+vmov	r4, r0, q0[3], q0[1]
+vmov	r5, r0, q0[3], q0[1]
+vmov	r6, r0, q0[3], q0[1]
+vmov	r7, r0, q0[3], q0[1]
+vmov	r8, r0, q0[3], q0[1]
+vmov	r9, r0, q0[3], q0[1]
+vmov	sl, r0, q0[3], q0[1]
+vmov	fp, r0, q0[3], q0[1]
+vmov	ip, r0, q0[3], q0[1]
+vmov	lr, r0, q0[3], q0[1]
+vmov	r0, r1, q0[3], q0[1]
+vmov	r0, r2, q0[3], q0[1]
+vmov	r0, r3, q0[3], q0[1]
+vmov	r0, r4, q0[3], q0[1]
+vmov	r0, r5, q0[3], q0[1]
+vmov	r0, r6, q0[3], q0[1]
+vmov	r0, r7, q0[3], q0[1]
+vmov	r0, r8, q0[3], q0[1]
+vmov	r0, r9, q0[3], q0[1]
+vmov	r0, sl, q0[3], q0[1]
+vmov	r0, fp, q0[3], q0[1]
+vmov	r0, ip, q0[3], q0[1]
+vmov	r0, lr, q0[3], q0[1]
+vmov	q1[2], q1[0], r0, r1
+vmov	q2[2], q2[0], r0, r1
+vmov	q3[2], q3[0], r0, r1
+vmov	q4[2], q4[0], r0, r1
+vmov	q5[2], q5[0], r0, r1
+vmov	q6[2], q6[0], r0, r1
+vmov	q7[2], q7[0], r0, r1
+vmov	q0[2], q0[0], r0, r0
+vmov	q0[2], q0[0], r1, r0
+vmov	q0[2], q0[0], r2, r0
+vmov	q0[2], q0[0], r3, r0
+vmov	q0[2], q0[0], r4, r0
+vmov	q0[2], q0[0], r5, r0
+vmov	q0[2], q0[0], r6, r0
+vmov	q0[2], q0[0], r7, r0
+vmov	q0[2], q0[0], r8, r0
+vmov	q0[2], q0[0], r9, r0
+vmov	q0[2], q0[0], sl, r0
+vmov	q0[2], q0[0], fp, r0
+vmov	q0[2], q0[0], ip, r0
+vmov	q0[2], q0[0], lr, r0
+vmov	q0[2], q0[0], r0, r1
+vmov	q0[2], q0[0], r0, r2
+vmov	q0[2], q0[0], r0, r3
+vmov	q0[2], q0[0], r0, r4
+vmov	q0[2], q0[0], r0, r5
+vmov	q0[2], q0[0], r0, r6
+vmov	q0[2], q0[0], r0, r7
+vmov	q0[2], q0[0], r0, r8
+vmov	q0[2], q0[0], r0, r9
+vmov	q0[2], q0[0], r0, sl
+vmov	q0[2], q0[0], r0, fp
+vmov	q0[2], q0[0], r0, ip
+vmov	q0[2], q0[0], r0, lr
+vmov	q0[2], q0[0], r1, r1
+vmov	q0[2], q0[0], r2, r2
+vmov	q0[2], q0[0], r3, r3
+vmov	q0[2], q0[0], r4, r4
+vmov	q0[2], q0[0], r5, r5
+vmov	q0[2], q0[0], r6, r6
+vmov	q0[2], q0[0], r7, r7
+vmov	q0[2], q0[0], r8, r8
+vmov	q0[2], q0[0], r9, r9
+vmov	q0[2], q0[0], sl, sl
+vmov	q0[2], q0[0], fp, fp
+vmov	q0[2], q0[0], ip, ip
+vmov	q0[2], q0[0], lr, lr
+vmov	q1[3], q1[1], r0, r1
+vmov	q2[3], q2[1], r0, r1
+vmov	q3[3], q3[1], r0, r1
+vmov	q4[3], q4[1], r0, r1
+vmov	q5[3], q5[1], r0, r1
+vmov	q6[3], q6[1], r0, r1
+vmov	q7[3], q7[1], r0, r1
+vmov	q0[3], q0[1], r0, r0
+vmov	q0[3], q0[1], r1, r0
+vmov	q0[3], q0[1], r2, r0
+vmov	q0[3], q0[1], r3, r0
+vmov	q0[3], q0[1], r4, r0
+vmov	q0[3], q0[1], r5, r0
+vmov	q0[3], q0[1], r6, r0
+vmov	q0[3], q0[1], r7, r0
+vmov	q0[3], q0[1], r8, r0
+vmov	q0[3], q0[1], r9, r0
+vmov	q0[3], q0[1], sl, r0
+vmov	q0[3], q0[1], fp, r0
+vmov	q0[3], q0[1], ip, r0
+vmov	q0[3], q0[1], lr, r0
+vmov	q0[3], q0[1], r0, r1
+vmov	q0[3], q0[1], r0, r2
+vmov	q0[3], q0[1], r0, r3
+vmov	q0[3], q0[1], r0, r4
+vmov	q0[3], q0[1], r0, r5
+vmov	q0[3], q0[1], r0, r6
+vmov	q0[3], q0[1], r0, r7
+vmov	q0[3], q0[1], r0, r8
+vmov	q0[3], q0[1], r0, r9
+vmov	q0[3], q0[1], r0, sl
+vmov	q0[3], q0[1], r0, fp
+vmov	q0[3], q0[1], r0, ip
+vmov	q0[3], q0[1], r0, lr
+vmov	q0[3], q0[1], r1, r1
+vmov	q0[3], q0[1], r2, r2
+vmov	q0[3], q0[1], r3, r3
+vmov	q0[3], q0[1], r4, r4
+vmov	q0[3], q0[1], r5, r5
+vmov	q0[3], q0[1], r6, r6
+vmov	q0[3], q0[1], r7, r7
+vmov	q0[3], q0[1], r8, r8
+vmov	q0[3], q0[1], r9, r9
+vmov	q0[3], q0[1], sl, sl
+vmov	q0[3], q0[1], fp, fp
+vmov	q0[3], q0[1], ip, ip
+vmov	q0[3], q0[1], lr, lr
